@@ -2,6 +2,12 @@
 
 WebAuth 3.5.3 (unreleased)
 
+ *) Add the connection IP address and, for Weblogin logins, the client IP
+    address to the WebKDC to the WebKDC log messages whenever processing
+    XML requests.
+
+ *) Document the log messages from the WebKDC in the mod_webkdc manual.
+
  *) Handle the renaming of ap_run_http_method to ap_run_http_scheme so
     that WebAuth will compile under Apache 2.2.  Thanks to Jim Rodgers for
     the patch.
